# danteo

./: .clang-format  CMakeLists.txt  README.md  ROADMAP.md  conanfile.txt
.github/workflows/: ci.yml
configured_files/: config.hpp.in
include/: CMakeLists.txt  warnings_ignore_pop.hpp  warnings_ignore_push.hpp
include/engine/: CMakeLists.txt  event.hpp  game_clock.hpp  game_runner.hpp  page_navigation.hpp  page_request.hpp  state.hpp  state_graph.hpp  state_graph_builder.hpp  state_machine.hpp  state_to_page_request_map.hpp  state_to_page_request_map_builder.hpp  visitor.hpp
include/gameplay/: CMakeLists.txt  characters.hpp  danteo_page_component_factory.hpp  danteo_page_per_state.hpp  danteo_page_request.hpp  danteo_state_graph.hpp  danteo_state_to_page_map.hpp  danteo_update_loop.hpp  page_presenter.hpp  plain_text_page_presenter.hpp  title_page.hpp  title_page_presenter.hpp
include/gameplay/pages/: dialogue_page.hpp  dialogue_page_builder.hpp  dialogue_page_presenter.hpp  fade_presenter_base.hpp  plain_text_page.hpp  plain_text_page_presenter.hpp  scene_change_page.hpp  scene_change_page_presenter.hpp  title_page.hpp  title_page_presenter.hpp
include/user_interface/: CMakeLists.txt  color.hpp  color_ftxui.hpp  game_presenter.hpp  game_screen.hpp  main_loop.hpp  next_component.hpp  plain_text_page.hpp  plain_text_page_presenter.hpp  size_2d.hpp  title_page.hpp  title_page_presenter.hpp
src/: CMakeLists.txt  main.cpp
src/engine/: CMakeLists.txt  state_graph.cpp
src/gameplay/: CMakeLists.txt  danteo_page_presenter.cpp  danteo_state_graph.cpp  main_loop.cpp
src/gameplay/pages/: dialogue_page_component_base.hpp  dialogue_page_only_presenter.cpp  dialogue_page_presenter.cpp  dialogue_page_with_choice_presenter.cpp  scene_change_page_presenter.cpp  title_page_presenter.cpp
src/gameplay/scenes/: ceo_scene.hpp  office_space_scene.hpp  office_space_scene_graph.cpp  office_space_scene_pages.cpp  reboot_scene.cpp  reboot_scene.hpp  scene.hpp  what_is_dantio.hpp  what_is_dantio_graph.cpp  what_is_dantio_pages.cpp
src/user_interface/: CMakeLists.txt  main_loop.cpp  plain_text_page.cpp  scroller.cpp  title_page_presenter.cpp
test/: CMakeLists.txt  constexpr_tests.cpp  format_chrono.hpp  tests.cpp
test/engine/: CMakeLists.txt  game_clock_constexpr_test.cpp  game_runner_test.cpp  page_request_test.cpp  state_graph_test.cpp  state_machine_test.cpp
test/gameplay/: CMakeLists.txt  dialogue_page_test.cpp  plain_text_page_constexpr_test.cpp  plain_text_page_test.cpp  title_page_constexpr_test.cpp
test/user_interface/: CMakeLists.txt  color_constexpr_test.cpp  fake_interactive_screen.hpp  game_presenter_test.cpp  game_screen_test.cpp  next_component_test.cpp  plain_text_page_constexpr_test.cpp  plain_text_page_test.cpp  size_2d_constexpr_test.cpp  title_page_constexpr_test.cpp
